# pdm-collect-dependencies

./: LICENSE  README.md  pyproject.toml
src/: pdm_collect_dependencies.py
