[project]
name = "pdm-collect-dependencies"
version = "0.1.3"
description = "pdm plugin to collect the wheels referenced in a pdm.lock file"
authors = [
    {name = "franz haas", email = "franz.dominik.haas@gmail.com"},
]
dependencies = [
    "unearth>=0.6.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project.entry-points.pdm]
collect_dependencies = "pdm_collect_dependencies:collect_dependencies"
